fix: correct options' text legibility in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,8 @@
 #result:focus {
     outline: none;
 }
+
+select > option {
+    background: white;
+    color: #213547;
+}
